--- a/play.css
+++ b/play.css
@@ -1,3 +1,40 @@
 .create-container{
+    background-color: rgba(191,191,191,0.5);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 
+    border-radius: 8px;
+    margin: auto;
+    height: 20vh;
+    width: 24vh;
+
+    position: fixed;
+    top: 90%;
+    left: 7%;
+    transform: translate(-50%, -50%);
+
+    text-align: center
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.button_container{
+    border: 1px solid black;
+    box-shadow: 1px 2px 2px black;
+    width: auto;
+    height: auto;
+    padding: 1%;
+    position: absolute;
+    border-radius: 25px;
+}
+
+canvas{
+    position: absolute;
+    z-index: -1;
+}
+
+body {
+    font-family: "Comic Sans MS", serif;
 }
