--- a/create.css
+++ b/create.css
@@ -4,12 +4,12 @@
 
     border-radius: 8px;
     margin: auto;
-    height: 20vh;
-    width: 24vh;
+    height: auto;
+    width: auto;
 
     position: fixed;
-    top: 90%;
-    left: 7%;
+    top: 85%;
+    left: 8%;
     transform: translate(-50%, -50%);
 
     text-align: center
