--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@font-face { font-family: Font; src: url('Game/Text/Perpetrator.ttf'); }
+
 .menu {
     background-color: rgba(191,191,191,0.5);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
@@ -56,8 +58,8 @@ canvas{
     z-index: -1;
 }
 
-body {
-    font-family: "Comic Sans MS", serif;
+body, input, textarea, button {
+    font-family: Font, sans-serif;
 }
 
 
