--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @font-face { font-family: Font; src: url('Game/Text/Perpetrator.ttf'); }
 
 .menu {
-    background-color: rgba(191,191,191,0.5);
+    background-color: rgba(117, 69, 26, 0.5);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 
     border-radius: 8px;
@@ -62,7 +62,90 @@ body, input, textarea, button {
     font-family: Font, sans-serif;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+.button_container{
+    border: 1px solid black;
+    box-shadow: 1px 2px 2px black;
+    width: auto;
+    height: auto;
+    padding: 1%;
+    position: relative;
+    top: 0%;
+    left: 0%;
+    border-radius: 25px;
+}
+
+
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+}
+
+button {
+    top: 25%;
+    position: relative;
+    margin: 2%;
+    width: 200px;
+    height: 50px;
+    cursor: pointer;
+    font-size: 20px;
+    font-family: Font, sans-serif;
+    letter-spacing: 5px;
+    background: #7a4d20;
+    border: 2px solid black;
+    box-shadow: 0px 0px 0px rgba(0,0,0,0.4);
+    transition: 200ms;
+}
+
+button:after {
+    content: '';
+    position: absolute;
+    transform: translateX(-55px) translateY(-40px);
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: transparent;
+    box-shadow: 0px 0px 50px transparent;
+    transition: 500ms;
+}
+
+button:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 10px 10px rgba(0,0,0,0.4);
+}
+
+button:hover:after {
+    background: white;
+    box-shadow: 0px 0px 20px #ffc421, 0px 0px 30px #ffc421, inset 0px 0px 10px #ffc421;
+    animation: spin 1s infinite linear;
+}
+
+@keyframes spin{
+    25%{transform: translateX(-25px) translateY(-35px);
+        width: 15px;
+        height: 15px;}
+    50% {transform: translateX(-55px) translateY(-30px);
+        width: 5px;
+        height: 5px;}
+    75% {transform: translateX(-85px) translateY(-35px);
+        width: 15px;
+        height: 15px;}
+}
+
+button:focus {
+    outline: none;
+}
 
 
 
