Various refactorings. Completed create documentation and refactoring. Almost completed settings documentation beside two functions. Removed a lot of warnings.

--- a/create.css
+++ b/create.css
@@ -1,4 +1,4 @@
-@font-face { font-family: Font; src: url('Game/Text/Perpetrator.ttf'); }
+@font-face { font-family: Font; src: url('Assets/Text/Perpetrator.ttf'); }
 
 .create-container{
     background-color: rgba(191,191,191,0.5);
