--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@font-face { font-family: Font; src: url('Game/Text/Perpetrator.ttf'); }
+@font-face { font-family: Font; src: url('Assets/Text/Perpetrator.ttf'); }
 
 .menu {
     background-color: rgba(117, 69, 26, 0.5);
